--- a/css/resume.css
+++ b/css/resume.css
@@ -1,6 +1,6 @@
 /* setting up the background cover so it looks good */
 .bgImage {
-    background-image: url("images/paper-backgound.jpg");
+    background-image: url(images/paper-backgound.jpg);
     height: 100%;
     width: 100%;
     margin: 0;
