--- a/css/resume.css
+++ b/css/resume.css
@@ -1,6 +1,6 @@
 /* setting up the background cover so it looks good */
 body {
-    background-image: url(images/paper-background.jpg);
+    background-image: url('images/paper-background.jpg');
     height: 100%;
     width: 100%;
     margin: 0;
