--- a/css/resume.css
+++ b/css/resume.css
@@ -1,5 +1,5 @@
 /* setting up the background cover so it looks good */
-body {
+.main_div {
     background-image: url('images/paper-background.jpg');
     height: 100%;
     width: 100%;
