--- a/css/resume.css
+++ b/css/resume.css
@@ -14,6 +14,19 @@ h1 {
     margin-left: 30%;
 }
 
+/* Making the columns for the resumes to go in. */
+.row {
+display: table;
+clear: both;
+}
+
+.column {
+display: table;
+clear: both;
+}
+
+
+/* Formatting the resumes and div. */
 .resumePart {
     height: 25%;
     margin-left: 10%;
