--- a/css/resume.css
+++ b/css/resume.css
@@ -14,6 +14,10 @@ h1 {
     margin-left: 30%;
 }
 
+/* Editing the table where the resumes are. */
+table {
+border-spacing: 30px;
+}
 
 /* Formatting the resumes and div. */
 .resumePart {
