--- a/css/resume.css
+++ b/css/resume.css
@@ -20,7 +20,7 @@ border-spacing: 30px;
 }
 
 th {
-font-size: 55px;
+font-size: 35px;
 }
 
 .header1 {
@@ -39,7 +39,7 @@ font-size: 55px;
     margin-bottom: 10%;
 }
 
-.resumeImage1,  {
+.resumeImage1 {
     height: 500px;
     width: 350px;
     margin-left: 25%;
