--- a/css/resume.css
+++ b/css/resume.css
@@ -11,7 +11,7 @@ body {
 
 h1 { 
     text-align: left;
-    margin-left: 30%;
+    margin-left: 20%;
 }
 
 /* Editing the table where the resumes are. */
@@ -32,7 +32,7 @@ font-size: 25px;
 }
 
 
-/* Formatting the resumes and div. */
+/* Formatting the resumes images. */
 .resumePart {
     height: 25%;
     margin-left: 10%;
