--- a/css/resume.css
+++ b/css/resume.css
@@ -15,8 +15,9 @@ h1 {
 }
 
 p {
-    font-size: 15px;
+    font-size: 20px;
     font-style: italic;
+    text-align: middle;
     left-margin: 10%;
 }
 
@@ -35,6 +36,7 @@ font-size: 25px;
 }
 
 .header2 {
+    padding-left: 5px;
     color: rgb(50, 91, 146)
 }
 
@@ -50,8 +52,11 @@ font-size: 25px;
 .resumeImage2 {
     height: 600px;
     width: 450px;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 35%;
     border: 8px solid rgb(50, 91, 146);
 }
-   
+
+.resumeImage1, .resumeImage2:hover {
+    height: 800px;
+    width: 650px;
+}
