--- a/css/resume.css
+++ b/css/resume.css
@@ -16,8 +16,7 @@ h1 {
 p {
     font-size: 20px;
     font-style: italic;
-    text-align: center;
-    left-margin: 10%;
+    text-align: left;
 }
 
 
