--- a/css/resume.css
+++ b/css/resume.css
@@ -11,12 +11,14 @@ body {
 
 h1 { 
     text-align: left;
+    padding: 20px;
 }
 
 p {
     font-size: 20px;
     font-style: italic;
-    text-align: right;
+    text-align: left;
+    padding: 22px;
 }
 
 
