--- a/css/resume.css
+++ b/css/resume.css
@@ -27,6 +27,11 @@ table {
 border-spacing: 20px;
 }
 
+td {
+    padding-left: 20px;
+    border-spacing: 15px;
+}
+
 td:hover {
     border-spacing: 10px;
 }
@@ -49,7 +54,6 @@ font-size: 25px;
 .resumeImage1 {
     height: 600px;
     width: 450px;
-    margin-left: 25%;
     border: 8px solid rgb(119, 167, 236);
 }
   
@@ -61,7 +65,6 @@ font-size: 25px;
 .resumeImage2 {
     height: 600px;
     width: 450px;
-    margin-left: 35%;
     border: 8px solid rgb(50, 91, 146);
 }
 
