--- a/css/resume.css
+++ b/css/resume.css
@@ -11,14 +11,14 @@ body {
 
 h1 { 
     text-align: left;
-    padding: 30%;
+    padding-left: 10%;
 }
 
 p {
     font-size: 20px;
     font-style: italic;
     text-align: left;
-    padding: 50px;
+    padding-left: 20%;
 }
 
 
@@ -28,8 +28,7 @@ border-spacing: 20px;
 }
 
 td {
-    padding-left: 20px;
-    border-spacing: 40px;
+    padding-left: 40px;
 }
 
 td:hover {
