Getting rid of .whenactive

--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,7 @@ img {
     background-color: rgb(119, 167, 236);
 }
 
-.whenactive {
-    background-color: rgb(50, 91, 146);
-}
-
-
-
+/* rgb(50, 91, 146); */
 
 /* .centered, p, .intro1, .intro2:
    centers text, gets rid of spacing issues, fixes the font size and color */
