--- a/css/references.css
+++ b/css/references.css
@@ -8,9 +8,9 @@ body {
 
 /* Setting the background of all the references I have.*/
 .secondReference {
-  background-image: url ("images/DuPageFoundation_Logo.png");
+  background-image: url (images/DuPageFoundation_Logo.png);
 }
 
 .thirdReference {
-  background-image: url ("images/MAC-Building-Entrance.jpeg");
+  background-image: url (images/MAC-Building-Entrance.jpeg);
 }
