--- a/css/resume.css
+++ b/css/resume.css
@@ -24,12 +24,12 @@ p {
 
 /* Editing the table where the resumes are. */
 table {
-    border-spacing: 20%;
+    padding: 20%;
 }
 
 td {
     margin: 30%;
-    border-spacing: 20%;
+    padding-left: 20%;
 }
 
 td:hover {
