--- a/css/references.css
+++ b/css/references.css
@@ -9,8 +9,10 @@ body {
 /* Setting the background of all the references I have.*/
 .secondReference {
   background-image: url(images/DuPageFoundation_Logo.png);
+  width: 100%;
 }
 
 .thirdReference {
   background-image: url(images/MAC-Building-Entrance.jpeg);
+  width: 100%;
 }
