--- a/css/resume.css
+++ b/css/resume.css
@@ -24,7 +24,8 @@ p {
 
 /* Editing the table where the resumes are. */
 table {
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 td {
