--- a/css/references.css
+++ b/css/references.css
@@ -9,7 +9,7 @@ body {
 
 /* Setting the background of all the references I have.*/
 .secondReference {
- /* background-image: url(images/DuPageFoundation_Logo.png); */
+  background-image: url(images/DuPageFoundation_Logo.png); 
   background-repeat: no-repeat;
   height: 100%;
 }
