--- a/css/references.css
+++ b/css/references.css
@@ -12,6 +12,7 @@ body {
   background-image: url(images/DuPageFoundation_Logo.png); 
   background-repeat: no-repeat;
   height: 50%;
+  width: 100%;
   font-color: black; 
 }
 
