--- a/css/references.css
+++ b/css/references.css
@@ -1,12 +1,3 @@
-/* Setting background color.
-body {
-  background: linear-gradient(black, white, black);
-  background-color: white;
-  height: 100%;
-  width: 100%;
-}
-*/
-
 /* Setting the background of all the references I have.*/
 .secondReference {
   background-image: url(images/DuPageFoundation_Logo.png); 
@@ -31,13 +22,13 @@ body {
 .thirdReference {
   background-image: url(images/MAC-Building-Entrance.jpeg);
   background-repeat: no-repeat;
+  background: rgba(255,255,255, 0.6);
   width: 100%;
-  opacity: 0.6;
 }
 
 .fourthReference {
   background-image: url(images/GlenbardWest.jpg);
   background-repeat: no-repeat;
+  background: rgba(255,255,255, 0.6);
   width: 100%;
-  opacity: 0.6;
 }
