--- a/css/references.css
+++ b/css/references.css
@@ -22,7 +22,7 @@
 .thirdReference {
   background-image: url(images/MAC-Building-Entrance.jpeg);
   background-repeat: no-repeat;
-  background: rgba(255,255,255, 0.6);
+  opacity: 0.6;
   width: 100%;
 }
 
