--- a/css/references.css
+++ b/css/references.css
@@ -20,7 +20,7 @@
 }
 
 .thirdReference {
-  background-image: url('images/MAC-Building-Entrance.jpeg');
+  background-image: url(images/MAC-Building-Entrance.jpeg);
   background-repeat: no-repeat;
   opacity: 0.6;
   width: 100%;
