--- a/css/references.css
+++ b/css/references.css
@@ -17,18 +17,26 @@
 &.contact {
   font-size: 25px;
 }
-}
 
+  img {
+    opacity: 0.6;
+    background-repeat: no-repeat;
+    wdith: 100%;
+  }
+  
+.image-wrapper {
+  position: relative;
+}
+  
 .thirdReference {
-  background-image: url(images/MAC-Building-Entrance.jpeg);
-  background-repeat: no-repeat;
-  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
 }
 
 .fourthReference {
   background-image: url(images/GlenbardWest.jpg);
   background-repeat: no-repeat;
-  background: rgba(255,255,255, 0.6);
   width: 100%;
 }
