--- a/css/references.css
+++ b/css/references.css
@@ -18,15 +18,15 @@
   font-size: 25px;
 }
 
-#thirdReference {
-  background: url(images/MAC-Building-Entrance.jpg);
+.thirdReference {
+  background: url("images/MAC-Building-Entrance.jpg");
   background-repeat: no-repeat;
   width: 100%;
   opacity: 0.6;
   }
 
-#fourthReference {
-  background-image: url(images/GlenbardWest.jpg);
+.fourthReference {
+  background-image: url("images/GlenbardWest.jpg");
   background-repeat: no-repeat;
   width: 100%;
   opacity: 0.6;
