--- a/css/references.css
+++ b/css/references.css
@@ -19,7 +19,7 @@
 }
 
 .thirdReference {
-  background: url("images/MAC-Building-Entrance.jpg");
+  background-image: url('images/MAC-Building-Entrance.jpg');
   background-repeat: no-repeat;
   width: 100%;
   opacity: 0.6;
