--- a/css/references.css
+++ b/css/references.css
@@ -21,8 +21,7 @@
 .thirdReference {
   background-image: url('images/MAC-Building-Entrance.jpg');
   background-repeat: no-repeat;
-  width: 50%;
-  height: 50%;
+  background-size: cover;
   opacity: 0.6;
   }
 
@@ -30,5 +29,6 @@
   background-image: url("images/GlenbardWest.jpg");
   background-repeat: no-repeat;
   width: 50%;
+  height: 50%;
   opacity: 0.6;
 }
