--- a/css/references.css
+++ b/css/references.css
@@ -19,3 +19,10 @@
   height: 250px;
   opacity: 0.6;
 }
+
+img {
+  background-repeat: no-repeat;
+  width: 500px;
+  height: 250px;
+  opacity: 0.6;
+}
