--- a/css/references.css
+++ b/css/references.css
@@ -8,30 +8,34 @@
 .thirdReference {
   background-image: url('../images/MAC-Building-Entrance.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
   position: absolute;
   opacity: 0.6;
   }
   
-/*
 .img3 {
-
   width: 500px;
   height: 250px;
-  opacity: 0.6;
 }
-*/
 
 .container3 {
-  color: black;
+  font-color: black;
 }
 
 .fourthReference {
   background-image: url("../images/GlenbardWest.jpg");
   background-repeat: no-repeat;
+  position: absolute;
   width: 500px;
   height: 250px;
   opacity: 0.6;
 }
 
+.img4 {
+  width: 500px;
+  height: 250px;
+}
+
+.container4 {
+  font-color: black;
+}
 
