--- a/css/references.css
+++ b/css/references.css
@@ -5,14 +5,19 @@
   width: 100%;
 }
 
+/*
 .thirdReference {
   background-image: url('../images/MAC-Building-Entrance.jpg');
   background-repeat: no-repeat;
   position: absolute;
   opacity: 0.6;
   }
+*/
 
 .img3 {
+  background-repeat: no-repeat;
+  position: absolute;
+  opacity: 0.6;
   width: 100%;
   height: 300px;
 }
@@ -29,6 +34,9 @@
 }
 
 .img4 {
+  background-repeat: no-repeat;
+  position: absolute;
+  opacity: 0.6;
   width: 100%;
   height: 300px;
 }
