--- a/css/references.css
+++ b/css/references.css
@@ -7,12 +7,20 @@
   height: 300px;
 }
 
+.container1 {
+  font-color: black;
+}
+
 .img2 {
   background-repeat: no-repeat;
   position: absolute;
   opacity: 0.6;
   width: 100%;
   height: 300px;
+}
+
+.container2{
+  font-color: black;
 }
 
 .img3 {
