--- a/css/references.css
+++ b/css/references.css
@@ -5,7 +5,7 @@
 
 .img1 {
   background-repeat: no-repeat;
-  position: static;
+  position: relative;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -21,7 +21,7 @@
 
 .img2 {
   background-repeat: no-repeat;
-  position: static;
+  position: relative;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -37,7 +37,7 @@
 
 .img3 {
   background-repeat: no-repeat;
-  position: static;
+  position: relative;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -53,7 +53,7 @@
 
 .img4 {
   background-repeat: no-repeat;
-  position: static;
+  position: relative;
   opacity: 0.6;
   width: 100%;
   height: 300px;
