--- a/css/references.css
+++ b/css/references.css
@@ -5,7 +5,7 @@
 
 .img1 {
   background-repeat: no-repeat;
-  position: relative;
+  position: absolute;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -21,7 +21,8 @@
 
 .img2 {
   background-repeat: no-repeat;
-  position: relative;
+  position: absolute;
+  top: 400px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -37,7 +38,8 @@
 
 .img3 {
   background-repeat: no-repeat;
-  position: relative;
+  position: absolute;
+  top: 800px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -53,7 +55,8 @@
 
 .img4 {
   background-repeat: no-repeat;
-  position: relative;
+  position: absolute;
+  top: 1200px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
