--- a/css/references.css
+++ b/css/references.css
@@ -1,7 +1,7 @@
 /* Setting the background of all the references I have.*/
 .firstReference {
   display: block;
-  height: 300px;
+  height: 400px;
 }
 
 .img1 {
@@ -17,13 +17,14 @@
 }
 
 .secondReference {
-  height: 300px;
+  display: block;
+  height: 400px;
 }
 
 .img2 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 400px;
+  top: 500px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -35,7 +36,7 @@
 
 .thirdReference {
   display: block;
-  height: 300px;
+  height: 400px;
 }
 
 .img3 {
@@ -53,13 +54,13 @@
 
 .fourthReference {
   display: block;
-  height: 300px;
+  height: 400px;
 }
 
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1200px;
+  top: 1000px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
