--- a/css/references.css
+++ b/css/references.css
@@ -13,6 +13,7 @@
 }
 
 .container1 {
+  text-align: center;
   font-color: black;
   left: 10px;
 }
@@ -32,6 +33,7 @@
 }
 
 .container2{
+  text-align: center;
   font-color: black;
   left: 10px;
   top: 400px;
@@ -52,6 +54,7 @@
 }
 
 .container3 {
+  text-align: center;
   font-color: black;
   left: 10px;
   top: 500px;
@@ -72,9 +75,10 @@
 }
 
 .container4 {
+  text-align: center;
   font-color: black;
   left: 10px;
-  top: 750px;
+  top: 600px;
 }
 
 
