--- a/css/style.css
+++ b/css/style.css
@@ -97,4 +97,6 @@ p {
 
 .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
     background-color: rgb(236,239,240);
+    padding-left: 50%;
+    padding-right: 50%;
 }
