Adding rgb fallback

--- a/css/references.css
+++ b/css/references.css
@@ -21,6 +21,7 @@
 }
 
 .container1:hover {
+  background: rgb(204, 204, 204);
   background: rgba(204, 204, 204, 0.5);
 }
 /* -----------------------------------------*/
