--- a/css/style.css
+++ b/css/style.css
@@ -100,5 +100,5 @@ p {
     /* padding-left: 200px; */
     /* padding-right: 200px; */
     margin-left: 200px;
-    margin-rigth: 200px;
+    margin-right: 200px;
 }
