--- a/css/references.css
+++ b/css/references.css
@@ -2,7 +2,7 @@
 .header {
   background: rgb(31, 38, 48);
   padding-bottom: 20px;
-  margin-left: 20px;
+  padding-left: 20px;
   color: white;
 }
 
