--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,10 @@ p {
 
 .paragraph1,.paragraph2, .paragraph3, .paragraph4 {
     background-color: rgb(236,239,240);
-    /* padding-left: 200px; */
-    /* padding-right: 200px; */
     margin-left: 200px;
     margin-right: 200px;
+}
+
+/* Resizing and editing the bostonMap image. */
+.bostonMap {
 }
