--- a/css/references.css
+++ b/css/references.css
@@ -43,7 +43,8 @@
 .img2 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 425px;
+  top: 375px;
+  /* was 425px*/
   opacity: 0.6;
   width: 100%;
   height: 300px;
