--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ p {
 }
 
 /* Resizing and editing the bostonMap image. */
-.bostonMap {
+#bostonMap {
     max-height: 400px;
     max-width: 400px;
 }
