--- a/css/references.css
+++ b/css/references.css
@@ -45,7 +45,7 @@
   position: absolute;
   top: 425px;
   opacity: 0.6;
-  width: 99%;
+  width: 98%;
   height: 300px;
   border: 5px solid rgb(48, 25, 52);
 }
@@ -136,4 +136,8 @@ p.contact {
 
 body {
   overflow-x: hidden;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
