--- a/css/references.css
+++ b/css/references.css
@@ -73,7 +73,7 @@
 .img3 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 810x;
+  top: 810px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
