--- a/css/references.css
+++ b/css/references.css
@@ -86,7 +86,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1300x;
+  top: 1500px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
