--- a/css/references.css
+++ b/css/references.css
@@ -1,3 +1,40 @@
+/* Creating the top nagigation bar. */
+.navcontainer {
+    position: rel;
+    width: auto;
+    margin: 0;
+}
+
+.topbar {
+    background-color:rgb(31, 38, 48);
+    overflow: hidden;
+}
+
+.topbar a {
+    float: left;
+    color:rgb(141, 156, 179);
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 27px;
+}
+
+.topbar a:hover {
+    background-color: rgb(119, 167, 236);
+}
+
+.topbar i {
+    float: left;
+    color: rgb(141, 156, 179);
+    text-align: center;
+    padding: -1px 12px;
+    font-size: 30px;
+}
+
+#reference {
+    background-color: rgb(50, 91, 146); 
+}
+
+
 /* Formatting the header for this page. */
 .header {
   background: rgb(31, 38, 48);
