--- a/css/references.css
+++ b/css/references.css
@@ -37,11 +37,10 @@
 
 /* Formatting the header for this page. */
 .header {
-  background: rgb(31, 38, 48);
+  background: #EBE8E2;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 20px;
-  color: white;
 }
 
 
