--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,10 @@ p {
 
 .gradient1 {
     top: 75%;
-    height: 400px;
+    height: 350px;
     margin-top: -4px;
-    background-color: rgb(31, 38, 48);
-    background: radial-gradient(50% 100% at bottom, white 3%, rgb(31, 38, 48));
+    background-color: rgb(236,239,240);
+    background: radial-gradient(60% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48));
 }
 
 /* Below the title screen section. */
