--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ p {
 .gradient1 {
     top: 75%;
     height: 500px;
+    width: 100%;
     margin-top: -4px;
     background-color: rgb(236,239,240);
     background: radial-gradient(55% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48));
