--- a/css/references.css
+++ b/css/references.css
@@ -37,7 +37,7 @@
 
 /* Formatting the header for this page. */
 .header {
-  background: #F5F5F4;
+  background: #EDEDED;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 20px;
