--- a/css/references.css
+++ b/css/references.css
@@ -37,7 +37,7 @@
 
 /* Formatting the header for this page. */
 .header {
-  background: #EDEDED;
+  background-color: rgb (225, 246, 255);
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 20px;
