--- a/css/references.css
+++ b/css/references.css
@@ -38,6 +38,7 @@
 /* Formatting the header for this page. */
 .header {
   background-color: rgb(141, 156, 179);
+  color: rgb(31, 38, 48);
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 20px;
