Adding paragraph padding

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ p {
 .paragraph1,.paragraph2, .paragraph3, .paragraph4 {
     margin-left: 375px;
     margin-right: 375px;
+    padding-bottom: 20px;
 }
 
 /* Resizing and editing the bostonMap image. */
