--- a/css/resume.css
+++ b/css/resume.css
@@ -63,8 +63,9 @@ p {
     padding-left: 10px;
     text-align: center;
     font-size: 18px;
-    margin-left: 300px;
+    margin-left: 550px;
     position: absolute;
+    font-family: "Times New Roman";
 }
 
 
