--- a/css/info.css
+++ b/css/info.css
@@ -4,6 +4,8 @@ body {
               linear-gradient(127deg, rgba(255,255,255,.8), rgba(0,255,0,0) 70%),
               linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70%);
   background-repeat: no-repeat;
+  height: 100%;
+  width: 100%
 }
 
 /* Button formatting. */
