--- a/css/info.css
+++ b/css/info.css
@@ -1,8 +1,8 @@
 /* Adding a gradient background. */
 body {
-  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70%),
-              linear-gradient(127deg, rgba(255,255,255,.8), rgba(0,255,0,0) 70%),
-              linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70%);
+  background: linear-gradient(217deg, rgba(255, 0, 0,.8), rgba(255,0,0,0) 70%),
+              linear-gradient(127deg, rgba(0, 255, 0,.8), rgba(0,255,0,0) 70%),
+              linear-gradient(336deg, rgba(0, 0, 255,.8), rgba(0,0,255,0) 70%);
   background-repeat: no-repeat;
   height: 100%;
   width: 100%
@@ -23,6 +23,7 @@ body {
 /* Formatting the table and its contents. */
 table {
   border: 2px solid black;
+  background-color: white;
 }
 
 th {
