--- a/css/info.css
+++ b/css/info.css
@@ -39,3 +39,8 @@ td {
   height: 20px;
   width: 20px; 
 }
+
+.row1, .row2, .row3, .row4, .row5 {
+  border: 2px solid black;
+  background-color: white;
+}
