--- a/css/info.css
+++ b/css/info.css
@@ -1,6 +1,10 @@
 /* Adding a gradient background. */
-body {
-  background-color: rgb(240, 240, 240);
+.gradient {
+  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+              linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+              linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+  height: 100%;
+  width: 100%;
 }
 
 /* Button formatting. */
