Getting rid of margin

--- a/css/info.css
+++ b/css/info.css
@@ -45,3 +45,13 @@ img {
   border: 2px solid black;
   background-color: white;
 }
+
+
+/* Getting rid of the margin that lines the entire page. */
+body {
+  overflow-x: hidden;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
