--- a/css/info.css
+++ b/css/info.css
@@ -1,11 +1,12 @@
 /* Adding a gradient background. */
 .gradient {
-  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
-              linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
-              linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+  background: linear-gradient(217deg, rgba(31, 38, 48, .8), rgba(31, 38, 48, 0) 70.71%),
+              linear-gradient(127deg, rgba(141, 156, 179, .8), rgba(141, 156, 179, 0) 70.71%),
+              linear-gradient(336deg, rgba(119, 167, 236, .8), rgba(119, 167, 236, 0) 70.71%);
   height: 100%;
   width: 100%;
 }
+
 
 /* Button formatting. */
 .btn {
