--- a/css/info.css
+++ b/css/info.css
@@ -1,8 +1,10 @@
 /* Adding a gradient background. */
 .gradient {
-  background: linear-gradient(217deg, rgba(31, 38, 48, .8), rgba(31, 38, 48, 0) 70.71%),
-              linear-gradient(127deg, rgba(141, 156, 179, .8), rgba(141, 156, 179, 0) 70.71%),
-              linear-gradient(336deg, rgba(119, 167, 236, .8), rgba(119, 167, 236, 0) 70.71%);
+  background: linear-gradient(217deg, rgba(31, 38, 48, .8), rgba(31, 38, 48, 0) 70%),
+              linear-gradient(127deg, rgba(141, 156, 179, .8), rgba(141, 156, 179, 0) 70%),
+              linear-gradient(336deg, rgba(119, 167, 236, .8), rgba(119, 167, 236, 0) 70%);
+  margin-bottomm: -10px;
+  margin-top: -10px;
   height: 100%;
   width: 100%;
 }
