--- a/css/info.css
+++ b/css/info.css
@@ -10,6 +10,12 @@
 }
 
 
+/* Editing header. */
+h1 {
+  padding-top: 30px;
+}
+
+
 /* Button formatting. */
 .btn {
     background-color: rgb(141, 156, 179);
