--- a/css/info.css
+++ b/css/info.css
@@ -28,6 +28,7 @@ h2 {
 
 /* Formatting the table and its contents. */
 table {
+  border-collapse: collapse; 
   border: 2px solid black;
   background-color: white;
 }
