--- a/css/info.css
+++ b/css/info.css
@@ -11,6 +11,7 @@
 /* Editing header. */
 h2 {
   padding-top: 30px;
+  padding-bottom: 15px;
 }
 
 
@@ -29,6 +30,7 @@ h2 {
 /* Formatting the table and its contents. */
 table {
   border-collapse: collapse; 
+  padding-bottom: 30px; 
   border: 2px solid black;
   background-color: white;
 }
