--- a/css/info.css
+++ b/css/info.css
@@ -40,6 +40,11 @@ table {
   padding: 20px;
 }
 
+tr {
+  border: 2px solid transparent;
+  background-color: white;
+}
+
 td {
   font-size: 20px;
   padding: 20px;
@@ -49,11 +54,6 @@ img {
   height: 60px;
   width: 60px; 
   
-}
-
-.row1, .row2, .row3, .row4, .row5 {
-  border: 2px solid black;
-  background-color: white;
 }
 
 
