--- a/css/info.css
+++ b/css/info.css
@@ -3,6 +3,7 @@
   background: linear-gradient(217deg, rgba(31, 38, 48, .8), rgba(31, 38, 48, 0) 70%),
               linear-gradient(127deg, rgba(141, 156, 179, .8), rgba(141, 156, 179, 0) 70%),
               linear-gradient(336deg, rgba(119, 167, 236, .8), rgba(119, 167, 236, 0) 70%);
+  margin-top: -20px;
   height: 100%;
   width: 100%;
 }
@@ -41,7 +42,7 @@ table {
 }
 
 tr {
-  border: 2px solid transparent;
+  border: 2px solid black;
   background-color: white;
 }
 
