--- a/css/info.css
+++ b/css/info.css
@@ -29,10 +29,11 @@ h2 {
 }
 
 /* Formatting the table and its contents. */
-table {
+.table {
   border-collapse: collapse; 
   border: 2px solid black;
   background-color: white;
+  padding-bottom: 30px;
 }
 
 .header1, .header2, .header3 {
