--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ p {
     margin-top: -20px;
 }
 
-.paragraph1,.paragraph2, .paragraph3, .paragraph4, .tyNote {
+.paragraph1, .tyNote {
     margin-left: 375px;
     margin-right: 375px;
     padding-bottom: 35px;
