--- a/css/info.css
+++ b/css/info.css
@@ -12,7 +12,7 @@
 /* Editing header. */
 h2 {
   padding-top: 40px;
-  padding-left: 200px;
+  padding-left: 220px;
   padding-bottom: 15px;
 }
 
@@ -37,7 +37,7 @@ h2 {
   padding-bottom: 30px;
 }
 
-.header1, .header2, .header3 {
+.header {
   front-size: 30px;
   padding: 20px;
 }
