--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ p {
     margin-top: -20px;
 }
 
-.paragraph, .paragraph1, .tyNote {
+.paragraph, .tyNote {
     margin-left: 375px;
     margin-right: 375px;
     padding-bottom: 35px;
