--- a/css/info.css
+++ b/css/info.css
@@ -38,8 +38,9 @@ h2 {
 }
 
 h3 {
-  front-size: 30px;
-  padding: 20px;
+  front-size: 32px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 tr {
