--- a/css/info.css
+++ b/css/info.css
@@ -30,11 +30,10 @@ h2 {
 }
 
 /* Formatting the table and its contents. */
-.table {
+table {
   border-collapse: collapse; 
   border: 2px solid black;
   background-color: white;
-  padding-bottom: 30px;
 }
 
 h3 {
