--- a/css/resume.css
+++ b/css/resume.css
@@ -83,11 +83,13 @@ td {
 
 .header1 {
     color: rgb(119, 167, 236);
+    text-align: center;
     font-size: 25px;
 }
 
 .header2 {
     color: rgb(50, 91, 146);
+    text-align: center;
     font-size: 25px;
 }
 
