--- a/css/resume.css
+++ b/css/resume.css
@@ -81,13 +81,13 @@ td {
     padding-bottom: 20px;
 }
 
-.header1 {
+p.header1 {
     color: rgb(119, 167, 236);
     text-align: center;
     font-size: 25px;
 }
 
-.header2 {
+p.header2 {
     color: rgb(50, 91, 146);
     text-align: center;
     font-size: 25px;
