--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ p {
     margin-top: -20px;
 }
 
-.aboutMe, .lifeSynopsis, .careerAspirations, .passion, .tyNote {
+.aboutMe, .lifeSynopsis, .careerAspirations, .passions, .tyNote {
     margin-left: 375px;
     margin-right: 375px;
     padding-bottom: 35px;
